--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,11 @@ RUN npm run build
 
 FROM nginx:latest
 COPY --from=build-stage /app/dist /usr/share/nginx/html
+
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY nginx.conf /etc/nginx/conf.d/
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
