--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,9 +8,9 @@ RUN npm run build
 FROM nginx:latest
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 
-RUN rm /etc/nginx/conf.d/default.conf
+#RUN rm /etc/nginx/conf.d/default.conf
 
-COPY nginx.conf /etc/nginx/conf.d/
+#COPY nginx.conf /etc/nginx/conf.d/
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
